File Upload feature implementation